# steam-reviewer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: 기획서.md
docs/images/: README.md
steam_reviewer/: __init__.py  cache.py  cli.py
steam_reviewer/ai/: __init__.py  summarize.py
steam_reviewer/analyzers/: __init__.py  basic.py  distributions.py  keywords.py  trends.py
steam_reviewer/loaders/: __init__.py  steam.py
steam_reviewer/report/: __init__.py  charts.py  html.py  text.py
tests/: test_ai.py  test_basic.py  test_cache.py  test_charts.py  test_distributions.py  test_html.py  test_keywords.py  test_trends.py
