[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "steam-reviewer"
version = "0.1.0"
description = "게임 이름만 넣으면 Steam 리뷰 수천 개를 분석해 통계 + AI 요약 리포트를 뽑아주는 도구"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jinuk James Lee", email = "jinuk.james.lee@gmail.com" }]
keywords = ["steam", "reviews", "nlp", "sentiment", "data-analysis", "ai", "summary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.28",
    "typer>=0.9",
    "pandas>=1.5",
]

[project.optional-dependencies]
charts = ["matplotlib>=3.6"]
ai = ["google-genai>=0.3", "python-dotenv>=1.0"]
dev = ["pytest>=7.0"]

[project.scripts]
steam-reviewer = "steam_reviewer.cli:app"

[project.urls]
Homepage = "https://github.com/jinjerry0927/steam-reviewer"
Repository = "https://github.com/jinjerry0927/steam-reviewer"
Issues = "https://github.com/jinjerry0927/steam-reviewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["steam_reviewer"]
